--- a/headings.html
+++ b/headings.html
@@ -6,7 +6,7 @@
     <title>Headings</title>
   </head>
   <body bgcolor="white">
-Goose Week 2020<
+Goose Week 2020
 Portlethen Academy is delighted to offer a range of trips, activities and experiences to first and second year pupils during GOOSE 2020.
 Please note that 20th – 22nd May are not additional holiday days and your child is expected to be on a school trip or in school throughout. A timetable of classes will be provided for pupils who do not wish to participate in any of the activities.
 
